# llm-multi-person-id-f00b-codex

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
artifacts/: diarizationlm_example_metrics.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_codex_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: OUTLINE.md  main.tex  references.bib
paper_draft/appendix/: reproducibility.tex
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: dataset_setup.tex  dataset_split.tex  main_results.tex  statistical_tests.tex
papers/: README.md
papers/pages/: 2309.05248_enhancing_speaker_diarization_llms_manifest.txt  2401.03506_diarizationlm_manifest.txt  2408.17431_multi_talker_asr_llms_manifest.txt  2506.05796_diarization_aware_ms_asr_llms_manifest.txt  2508.06372_speakerlm_manifest.txt  2511.16046_jedis_llm_manifest.txt  2604.22467_dm_asr_manifest.txt
results/: aggregate_metrics.csv  dataset_summary.csv  environment.json  error_analysis.csv  experiment_cases.json  metrics_by_case.csv  predictions.jsonl  reproducibility_hashes.json  selected_windows.json  speaker_maps.json  statistical_tests.csv  usage_summary.json
src/: run_experiment.py
(+2 files in other folders)
