[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "absl-py>=2.5.0",
    "arxiv>=4.0.0",
    "beautifulsoup4>=4.15.0",
    "datasets>=5.0.0",
    "huggingface-hub>=1.22.0",
    "matplotlib>=3.10.9",
    "numba>=0.66.0",
    "openai>=2.44.0",
    "pandas>=2.3.3",
    "pypdf>=6.14.2",
    "requests>=2.33.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
